
2013-July-24 Chris Morley

	Support for new format of plugin data. Not all plugins done yet.
	* schemas/mesmer.xsd,schemas/mesmerPlugins.xsd: updated.
	* schemas/schemaNotes.txt: added.
	* examplesSchema/*.xml: put into new format (where supported).

	src/plugins/AnalyticalRepresentation.cpp,src/plugins/ExponentialDown.cpp,
	src/plugins/fitting.cpp,src/plugins/LandauZenerCrossingCoeff.cpp,
	src/plugins/Marquardt.cpp,src/plugins/WKBCrossingCoeff.cpp,
	src/plugins/WKBTunnellingCoefficients.cpp: can parse new (and old) format.

	* src/CollisionOperator.cpp,src/MolecularComponents.cpp,src/ParseForPlugin.h,
	src/Reaction.cpp,src/System.cpp: Use new ParseForPlugin code for new format XML

	MesmerQA/QA.bat: correct display of Mesmer version


2013-July-20 Struan Robertson
	
	* AnalyticalRepresentation.cpp: Addition of basic class structure for the 
	analytical representation method.
	* HinderedRotorQM1D.cpp, WKBTunnellingCoefficients.cpp: Bug fixes checked 
	in on behalf of Robin.

2013-July-20 Struan Robertson
	
	* UnitTests.cpp/qd_test.h: QD unit tests added to MESMER unit
	tests and unit test baseline updated.

2013-June-16 Struan Robertson
	
	* PseudoIsomerizationReaction.h/.cpp: Prior fragmentation distribution 
	corrected for threshold energy and cell-off-set.

2013-June-11 Struan Robertson
	
	* PseudoIsomerizationReaction.cpp: Prior distribution (dissociation
	distribution) calculation method (changes checked in on behalf of Robin).

2013-May-27 Struan Robertson
	
	* PseudoIsomerizationReaction.h/.cpp: Initial revision of pseudo-
	Isomerization reaction class.

2013-May-11 Struan Robertson
	
	* CollisionOperator.cpp, System.cpp, TMatrix.h: Matrix printing 
	generalized and applied to eigenvector matrix.

2013-May-11 Struan Robertson
	
	* CollisionOperator.cpp: Fix for grain number problem (checked-in
	on behalf of Robin).
	* MesmerQA: Baseline update following the above fix.
	* MesmerQA: .xml update following the application of schema.

2013-May-6 Struan Robertson